# enten4

./: .gitignore  CMakeLists.txt  README.md
libs/sdl2/: CMakeLists.txt
src/: basicshaders.h  basicshapes.h  camera.cpp  camera.h  engine.cpp  engine.h  main.cpp  mesh.cpp  mesh.h  shaders.cpp  shaders.h  types.h
tests/: CMakeLists.txt
